[package]
name = "EleganceDB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
crc32fast = "1.3.2"
anyhow = "1.0.75"
moka = { version = "0.12.1", features = ["sync"] }
tempfile = { version = "3.8.1", features = [] }
tempdir = { version = "0.3.7", features = [] }
rand = "0.8.5"